--- a/docs/1.getting-started.md
+++ b/docs/1.getting-started.md
@@ -16,7 +16,7 @@ from pathlib import Path
 from OpenSSL.crypto import FILETYPE_ASN1
 from tlstrust import TrustStore
 
-der = Path(os.path.join(os.path.dirname(__file__), "cert.der")).read_bytes()
-trust_store = TrustStore()
-print(trust_store.is_trusted(FILETYPE_ASN1, der))
+der = Path(os.path.join(os.path.dirname(__file__), "cacert.der")).read_bytes()
+trust_store = TrustStore(FILETYPE_ASN1, der)
+print(trust_store.is_trusted())
 ```
