--- a/docs/0.index.md
+++ b/docs/0.index.md
@@ -1,5 +1,8 @@
 # Documentation
 
 1. [Getting Started](./docs/1.getting-started.md)
+2. [Platform Trust Stores](./docs/2.platforms.md)
+3. [Browser Trust Stores](./docs/3.browsers.md)
+4. [Programming Language Trust](./docs/4.languages.md) (Microservice architecture and APIs)
 
 # [Change Log](./docs/z.change-log.md)
