--- a/docs/1.getting-started.md
+++ b/docs/1.getting-started.md
@@ -18,5 +18,5 @@ from tlstrust import TrustStore
 
 der = Path(os.path.join(os.path.dirname(__file__), "cacert.der")).read_bytes()
 trust_store = TrustStore(FILETYPE_ASN1, der)
-print(trust_store.is_trusted())
+print(trust_store.check())
 ```
