--- a/docs/2.platforms.md
+++ b/docs/2.platforms.md
@@ -15,7 +15,7 @@ trust_store = TrustStore(FILETYPE_ASN1, der)
 ## Generic checking
 
 ```py
-all_trusted = trust_store.is_trusted()
+all_trusted = trust_store.check()
 assert all_trusted is True
 assert trust_store.apple # Until December 1st 2021
 assert trust_store.android
@@ -29,7 +29,7 @@ assert trust_store.java
 ```py
 from tlstrust.context import PLATFORM_WINDOWS
 
-assert trust_store.is_trusted(PLATFORM_WINDOWS)
+assert trust_store.check(PLATFORM_WINDOWS)
 ```
 
 ## Android only
@@ -37,7 +37,7 @@ assert trust_store.is_trusted(PLATFORM_WINDOWS)
 ```py
 from tlstrust.context import PLATFORM_ANDROID
 
-assert trust_store.is_trusted(PLATFORM_ANDROID)
+assert trust_store.check(PLATFORM_ANDROID)
 ```
 
 ## Java only
@@ -45,7 +45,7 @@ assert trust_store.is_trusted(PLATFORM_ANDROID)
 ```py
 from tlstrust.context import PLATFORM_JAVA
 
-assert trust_store.is_trusted(PLATFORM_JAVA)
+assert trust_store.check(PLATFORM_JAVA)
 ```
 
 ## Apple only
@@ -53,7 +53,7 @@ assert trust_store.is_trusted(PLATFORM_JAVA)
 ```py
 from tlstrust.context import PLATFORM_APPLE
 
-assert trust_store.is_trusted(PLATFORM_APPLE)
+assert trust_store.check(PLATFORM_APPLE)
 ```
 
 ## Linux only
@@ -61,5 +61,5 @@ assert trust_store.is_trusted(PLATFORM_APPLE)
 ```py
 from tlstrust.context import PLATFORM_WINDOWS
 
-assert trust_store.is_trusted(PLATFORM_LINUX)
+assert trust_store.check(PLATFORM_LINUX)
 ```
