path to version 1.0.0

--- a/docs/1.getting-started.md
+++ b/docs/1.getting-started.md
@@ -18,5 +18,77 @@ from tlstrust import TrustStore
 
 der = Path(os.path.join(os.path.dirname(__file__), "cacert.der")).read_bytes()
 trust_store = TrustStore(FILETYPE_ASN1, der)
-print(trust_store.is_trusted())
+print(trust_store.check_trust())
+```
+
+### Use with python requests library
+
+```py
+import requests
+from requests.adapters import HTTPAdapter
+from urllib3.connectionpool import HTTPSConnectionPool
+from urllib3.poolmanager import PoolManager, SSL_KEYWORDS
+from OpenSSL.crypto import FILETYPE_ASN1, X509, load_certificate
+from tlstrust import TrustStore, context
+
+class InspectedHTTPSConnectionPool(HTTPSConnectionPool):
+    @property
+    def inspector(self):
+        return self._inspector
+
+    @inspector.setter
+    def inspector(self, inspector):
+        self._inspector = inspector
+
+    def _validate_conn(self, conn):
+        super()._validate_conn(conn)
+        if self.inspector:
+            self.inspector(self.host, self.port, conn)
+
+class InspectedPoolManager(PoolManager):
+    @property
+    def inspector(self):
+        return self._inspector
+
+    @inspector.setter
+    def inspector(self, inspector):
+        self._inspector = inspector
+
+    def _new_pool(self, scheme, host, port, request_context=None):
+        if scheme != 'https':
+            return super()._new_pool(scheme, host, port)
+
+        kwargs = self.connection_pool_kw.copy()
+        if scheme == 'http':
+            kwargs = self.connection_pool_kw.copy()
+            for keyword in SSL_KEYWORDS:
+                kwargs.pop(keyword, None)
+
+        pool = InspectedHTTPSConnectionPool(host, port, **kwargs)
+        pool.inspector = self.inspector
+        return pool
+
+class TLSInspectorAdapter(HTTPAdapter):
+    def __init__(self, inspector):
+        self._inspector = inspector
+        super().__init__(max_retries=0)
+
+    def init_poolmanager(self, connections, maxsize, block=False, **pool_kwargs):
+        self.poolmanager = InspectedPoolManager(num_pools=connections, maxsize=maxsize, block=block, strict=True, **pool_kwargs)
+        self.poolmanager.inspector = self._inspector
+
+
+def connection_inspector(host, port, conn):
+    der = conn.sock.getpeercert(True)
+    trust_store = TrustStore(FILETYPE_ASN1, der)
+    if not trust_store.is_trusted:
+        # do something about it
+        raise TLSNotTrustedError
+
+url = 'https://www.google.com'
+session = requests.Session()
+if url.startswith('https'):
+    session.mount(url, TLSInspectorAdapter(connection_inspector))
+    session.get(url, verify=True)
+
 ```
