--- a/docs/2.platforms.md
+++ b/docs/2.platforms.md
@@ -15,8 +15,11 @@ trust_store = TrustStore(FILETYPE_ASN1, der)
 ## Generic checking
 
 ```py
-all_trusted = trust_store.is_trusted()
+all_trusted = trust_store.check_trust()
 assert all_trusted is True
+# same as
+assert trust_store.is_trusted
+# or individually
 assert trust_store.apple # Until December 1st 2021
 assert trust_store.android
 assert trust_store.linux
@@ -29,37 +32,26 @@ assert trust_store.java
 ```py
 from tlstrust.context import PLATFORM_WINDOWS
 
-assert trust_store.is_trusted(PLATFORM_WINDOWS)
+assert trust_store.check_trust(PLATFORM_WINDOWS)
 ```
 
-## Android only
+## Other Platform
 
 ```py
 from tlstrust.context import PLATFORM_ANDROID
-
-assert trust_store.is_trusted(PLATFORM_ANDROID)
-```
-
-## Java only
-
-```py
 from tlstrust.context import PLATFORM_JAVA
-
-assert trust_store.is_trusted(PLATFORM_JAVA)
-```
-
-## Apple only
-
-```py
 from tlstrust.context import PLATFORM_APPLE
-
-assert trust_store.is_trusted(PLATFORM_APPLE)
+from tlstrust.context import PLATFORM_LINUX
 ```
 
-## Linux only
+## Helper methods
 
 ```py
 from tlstrust.context import PLATFORM_WINDOWS
-
-assert trust_store.is_trusted(PLATFORM_LINUX)
+# Does the certificate simply exist in the platform trust store?
+assert trust_store.exists(PLATFORM_WINDOWS)
+# Retrieve the certificate
+assert trust_store.get_certificate_from_store(PLATFORM_WINDOWS)
+# Is the certificate expired in a specific store?
+assert trust_store.expired_in_store(PLATFORM_WINDOWS)
 ```
