--- a/docs/3.browsers.md
+++ b/docs/3.browsers.md
@@ -17,7 +17,7 @@ trust_store = TrustStore(FILETYPE_ASN1, der)
 ```py
 from tlstrust.context import BROWSER_AMAZON_SILK
 
-assert trust_store.is_trusted(BROWSER_AMAZON_SILK)
+assert trust_store.check_trust(BROWSER_AMAZON_SILK)
 ```
 
 ## Embedded browser on Samsung Android
@@ -25,7 +25,7 @@ assert trust_store.is_trusted(BROWSER_AMAZON_SILK)
 ```py
 from tlstrust.context import BROWSER_SAMSUNG_INTERNET_BROWSER
 
-assert trust_store.is_trusted(BROWSER_SAMSUNG_INTERNET_BROWSER)
+assert trust_store.check_trust(BROWSER_SAMSUNG_INTERNET_BROWSER)
 ```
 
 ## Google Chrome (except iOS), use Safari instead)
@@ -33,7 +33,7 @@ assert trust_store.is_trusted(BROWSER_SAMSUNG_INTERNET_BROWSER)
 ```py
 from tlstrust.context import BROWSER_GOOGLE_CHROME
 
-assert trust_store.is_trusted(BROWSER_GOOGLE_CHROME)
+assert trust_store.check_trust(BROWSER_GOOGLE_CHROME)
 ```
 
 ## Chromium Web Browser
@@ -41,7 +41,7 @@ assert trust_store.is_trusted(BROWSER_GOOGLE_CHROME)
 ```py
 from tlstrust.context import BROWSER_CHROMIUM
 
-assert trust_store.is_trusted(BROWSER_CHROMIUM)
+assert trust_store.check_trust(BROWSER_CHROMIUM)
 ```
 
 ## Firefox, and other Mozilla products
@@ -49,7 +49,7 @@ assert trust_store.is_trusted(BROWSER_CHROMIUM)
 ```py
 from tlstrust.context import BROWSER_FIREFOX
 
-assert trust_store.is_trusted(BROWSER_FIREFOX)
+assert trust_store.check_trust(BROWSER_FIREFOX)
 ```
 
 ## Brave
@@ -57,7 +57,7 @@ assert trust_store.is_trusted(BROWSER_FIREFOX)
 ```py
 from tlstrust.context import BROWSER_BRAVE
 
-assert trust_store.is_trusted(BROWSER_BRAVE)
+assert trust_store.check_trust(BROWSER_BRAVE)
 ```
 
 ## Safari
@@ -65,7 +65,7 @@ assert trust_store.is_trusted(BROWSER_BRAVE)
 ```py
 from tlstrust.context import BROWSER_SAFARI
 
-assert trust_store.is_trusted(BROWSER_SAFARI)
+assert trust_store.check_trust(BROWSER_SAFARI)
 ```
 
 ## Edge
@@ -73,7 +73,7 @@ assert trust_store.is_trusted(BROWSER_SAFARI)
 ```py
 from tlstrust.context import BROWSER_MICROSOFT_EDGE
 
-assert trust_store.is_trusted(BROWSER_MICROSOFT_EDGE)
+assert trust_store.check_trust(BROWSER_MICROSOFT_EDGE)
 ```
 
 ## Yandex
@@ -81,7 +81,7 @@ assert trust_store.is_trusted(BROWSER_MICROSOFT_EDGE)
 ```py
 from tlstrust.context import BROWSER_YANDEX_BROWSER
 
-assert trust_store.is_trusted(BROWSER_YANDEX_BROWSER)
+assert trust_store.check_trust(BROWSER_YANDEX_BROWSER)
 ```
 
 ## Opera
@@ -89,7 +89,7 @@ assert trust_store.is_trusted(BROWSER_YANDEX_BROWSER)
 ```py
 from tlstrust.context import BROWSER_OPERA
 
-assert trust_store.is_trusted(BROWSER_OPERA)
+assert trust_store.check_trust(BROWSER_OPERA)
 ```
 
 ## Vivaldi
@@ -97,7 +97,7 @@ assert trust_store.is_trusted(BROWSER_OPERA)
 ```py
 from tlstrust.context import BROWSER_VIVALDI
 
-assert trust_store.is_trusted(BROWSER_VIVALDI)
+assert trust_store.check_trust(BROWSER_VIVALDI)
 ```
 
 ## Tor Web Browser
@@ -105,5 +105,5 @@ assert trust_store.is_trusted(BROWSER_VIVALDI)
 ```py
 from tlstrust.context import BROWSER_TOR_BROWSER
 
-assert trust_store.is_trusted(BROWSER_TOR_BROWSER)
+assert trust_store.check_trust(BROWSER_TOR_BROWSER)
 ```
