--- a/docs/4.languages.md
+++ b/docs/4.languages.md
@@ -17,9 +17,9 @@ trust_store = TrustStore(FILETYPE_ASN1, der)
 ```py
 from tlstrust.context import PYTHON_WINDOWS_SERVER, PYTHON_LINUX_SERVER, PYTHON_MACOS_SERVER
 
-assert trust_store.is_trusted(PYTHON_WINDOWS_SERVER)
-assert trust_store.is_trusted(PYTHON_LINUX_SERVER)
-assert trust_store.is_trusted(PYTHON_MACOS_SERVER)
+assert trust_store.check_trust(PYTHON_WINDOWS_SERVER)
+assert trust_store.check_trust(PYTHON_LINUX_SERVER)
+assert trust_store.check_trust(PYTHON_MACOS_SERVER)
 ```
 
 ## Python package `certifi`
@@ -27,7 +27,7 @@ assert trust_store.is_trusted(PYTHON_MACOS_SERVER)
 ```py
 from tlstrust.context import PYTHON_CERTIFI
 
-assert trust_store.is_trusted(PYTHON_CERTIFI)
+assert trust_store.check_trust(PYTHON_CERTIFI)
 ```
 
 ## Python package `urllib`
@@ -35,7 +35,7 @@ assert trust_store.is_trusted(PYTHON_CERTIFI)
 ```py
 from tlstrust.context import PYTHON_URLLIB
 
-assert trust_store.is_trusted(PYTHON_URLLIB)
+assert trust_store.check_trust(PYTHON_URLLIB)
 ```
 
 ## Python package `requests`
@@ -43,7 +43,7 @@ assert trust_store.is_trusted(PYTHON_URLLIB)
 ```py
 from tlstrust.context import PYTHON_REQUESTS
 
-assert trust_store.is_trusted(PYTHON_REQUESTS)
+assert trust_store.check_trust(PYTHON_REQUESTS)
 ```
 
 ## Python framework `django`
@@ -51,5 +51,5 @@ assert trust_store.is_trusted(PYTHON_REQUESTS)
 ```py
 from tlstrust.context import PYTHON_DJANGO
 
-assert trust_store.is_trusted(PYTHON_DJANGO)
+assert trust_store.check_trust(PYTHON_DJANGO)
 ```
