--- a/docs/2.platforms.md
+++ b/docs/2.platforms.md
@@ -20,7 +20,6 @@ assert all_trusted is True
 # same as
 assert trust_store.is_trusted
 # or individually
-assert trust_store.apple # Until December 1st 2021
 assert trust_store.android
 assert trust_store.linux
 assert trust_store.ccadb # Windows, Mozilla, and Apple (from December 1st 2021)
@@ -35,12 +34,11 @@ from tlstrust.context import PLATFORM_WINDOWS
 assert trust_store.check_trust(PLATFORM_WINDOWS)
 ```
 
-## Other Platform
+## Other Platforms
 
 ```py
 from tlstrust.context import PLATFORM_ANDROID
 from tlstrust.context import PLATFORM_JAVA
-from tlstrust.context import PLATFORM_APPLE
 from tlstrust.context import PLATFORM_LINUX
 ```
 
