--- a/docs/2.platforms.md
+++ b/docs/2.platforms.md
@@ -12,6 +12,18 @@ der = Path(os.path.join(os.path.dirname(__file__), "cacert.der")).read_bytes()
 trust_store = TrustStore(FILETYPE_ASN1, der)
 ```
 
+## Basic usage
+
+Using CCADB for demonstration purposes (includes Apple, Microsoft, and Mozilla)
+
+```py
+from tlstrust.context import SOURCE_CCADB
+
+assert trust_store.exists(SOURCE_CCADB)
+assert trust_store.expired_in_store(SOURCE_CCADB)
+assert trust_store.get_certificate_from_store(SOURCE_CCADB)
+assert trust_store.check_trust(SOURCE_CCADB)
+```
 ## Generic checking
 
 ```py
@@ -24,6 +36,7 @@ assert trust_store.android
 assert trust_store.linux
 assert trust_store.ccadb # Windows, Mozilla, and Apple (from December 1st 2021)
 assert trust_store.java
+assert trust_store.apple # Until April 1st 2022
 ```
 
 ## Windows only
@@ -40,6 +53,27 @@ assert trust_store.check_trust(PLATFORM_WINDOWS)
 from tlstrust.context import PLATFORM_ANDROID
 from tlstrust.context import PLATFORM_JAVA
 from tlstrust.context import PLATFORM_LINUX
+from tlstrust.context import PLATFORM_APPLE
+```
+
+## Apple (before CCADB)
+
+Apple (legacy) Trust Store support exists in earlier versions of `tlstrust`, it was removed in version `2.0.0` so installing prior versions will allow you to access this functionality.
+
+## Android versions
+
+```py
+from tlstrust.context import PLATFORM_ANDROID2_2
+from tlstrust.context import PLATFORM_ANDROID2_3
+from tlstrust.context import PLATFORM_ANDROID3
+from tlstrust.context import PLATFORM_ANDROID4
+from tlstrust.context import PLATFORM_ANDROID4_4
+from tlstrust.context import PLATFORM_ANDROID7
+from tlstrust.context import PLATFORM_ANDROID8
+from tlstrust.context import PLATFORM_ANDROID9
+from tlstrust.context import PLATFORM_ANDROID10
+from tlstrust.context import PLATFORM_ANDROID11
+from tlstrust.context import PLATFORM_ANDROID12
 ```
 
 ## Helper methods
