--- a/docs/0.index.md
+++ b/docs/0.index.md
@@ -4,5 +4,6 @@
 2. [Platform Trust Stores](./docs/2.platforms.md)
 3. [Browser Trust Stores](./docs/3.browsers.md)
 4. [Programming Language Trust](./docs/4.languages.md) (Microservice architecture and APIs)
+5. [Using the Command Line](./docs/5.cli.md)
 
 # [Change Log](./docs/z.change-log.md)
