--- a/docs/5.cli.md
+++ b/docs/5.cli.md
@@ -101,10 +101,10 @@ A port number for the TLS/HTTPS server corresponding to the specified host name.
 **Validation**: Type `str`, valid path and file is readable, or valid url (see `--host` validation)
 
 **Examples**
-1. `tlsverify -H client.badssl.com -C /path/to/cert.pem`
-2. `tlsverify -H client.badssl.com --client-pem /path/to/cert.pem`
-3. `tlsverify -H client.badssl.com -C 'https://badssl.com/certs/badssl.com-client.pem'`
-4. `tlsverify -H client-cert-missing.badssl.com --client-pem 'https://badssl.com/certs/badssl.com-client.pem'`
+1. `tlstrust -H client.badssl.com -C /path/to/cert.pem`
+2. `tlstrust -H client.badssl.com --client-pem /path/to/cert.pem`
+3. `tlstrust -H client.badssl.com -C 'https://badssl.com/certs/badssl.com-client.pem'`
+4. `tlstrust -H client-cert-missing.badssl.com --client-pem 'https://badssl.com/certs/badssl.com-client.pem'`
 
 ### --disable-sni
 
