--- a/docs/4.languages.md
+++ b/docs/4.languages.md
@@ -15,41 +15,41 @@ trust_store = TrustStore(FILETYPE_ASN1, der)
 ## Python native `http.client`
 
 ```py
-from tlstrust.context import PYTHON_WINDOWS_SERVER, PYTHON_LINUX_SERVER, PYTHON_MACOS_SERVER
+from tlstrust.context import LANGUAGE_PYTHON_WINDOWS_SERVER, LANGUAGE_PYTHON_LINUX_SERVER, LANGUAGE_PYTHON_MACOS_SERVER
 
-assert trust_store.check_trust(PYTHON_WINDOWS_SERVER)
-assert trust_store.check_trust(PYTHON_LINUX_SERVER)
-assert trust_store.check_trust(PYTHON_MACOS_SERVER)
+assert trust_store.check_trust(LANGUAGE_PYTHON_WINDOWS_SERVER)
+assert trust_store.check_trust(LANGUAGE_PYTHON_LINUX_SERVER)
+assert trust_store.check_trust(LANGUAGE_PYTHON_MACOS_SERVER)
 ```
 
 ## Python package `certifi`
 
 ```py
-from tlstrust.context import PYTHON_CERTIFI
+from tlstrust.context import LANGUAGE_PYTHON_CERTIFI
 
-assert trust_store.check_trust(PYTHON_CERTIFI)
+assert trust_store.check_trust(LANGUAGE_PYTHON_CERTIFI)
 ```
 
 ## Python package `urllib`
 
 ```py
-from tlstrust.context import PYTHON_URLLIB
+from tlstrust.context import LANGUAGE_PYTHON_URLLIB
 
-assert trust_store.check_trust(PYTHON_URLLIB)
+assert trust_store.check_trust(LANGUAGE_PYTHON_URLLIB)
 ```
 
 ## Python package `requests`
 
 ```py
-from tlstrust.context import PYTHON_REQUESTS
+from tlstrust.context import LANGUAGE_PYTHON_REQUESTS
 
-assert trust_store.check_trust(PYTHON_REQUESTS)
+assert trust_store.check_trust(LANGUAGE_PYTHON_REQUESTS)
 ```
 
 ## Python framework `django`
 
 ```py
-from tlstrust.context import PYTHON_DJANGO
+from tlstrust.context import LANGUAGE_PYTHON_DJANGO
 
-assert trust_store.check_trust(PYTHON_DJANGO)
+assert trust_store.check_trust(LANGUAGE_PYTHON_DJANGO)
 ```
